Finished my website

--- a/index.html
+++ b/index.html
@@ -11,14 +11,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="top-banner">
     <div class="half-width">
         <h1>Welcome To</h1>
-        <h1><span class="name-highlight">Jannatul Ferdous </span>Website</h1>
+        <h1><span class="orange-highlight">Jannatul </span>Website</h1>
         <h3>Professional web developer</h3>
-        <p>Hi, I'm Jannatul! I'm a web developer. In a nutshell, I create websites that help organizations address business challenges and meet their needs. I manage everything from website navigation and layout to a company's web hosting and security architecture. My expertise lies within front-end web apps, and the main languages in my tech stack are JavaScript, React, and of course HTML/CSS. I'm a lifelong learner and love to read and run.</p>
+        <p>Hi, I'm Jannatul Ferdous! I'm a web developer. In a nutshell, I create websites that help organizations address business challenges and meet their needs. I manage everything from website navigation and layout to a company's web hosting and security architecture. My expertise lies within front-end web apps, and the main languages in my tech stack are JavaScript, React, and of course HTML/CSS. I'm a lifelong learner and love to read and run.</p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jannatul38/">HIRE ME</a>
     </div>
     <div class="half-width">
         <img src="images/profile.png" alt="">
     </div>
+</section>
+<section class="dream-area">
+    <div class="half-width">
+    <img src="images/profile2.png" alt="">
+    </div>
+    <div class="half-width">
+         <h2>Big Dream</h2>
+         <h3>Become a web developer</h3>
+         <p>I already learned the basic HTML and CSS. I can build any single website. My goal is to build websites and learn advanced topics.</p>
+         <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jannatul38/">DOWNLOAD RESUME</a>
+    </div>
+</section>
+<section class="experience-area">
+<h2>Experiences</h2>
+<div id="full-stack" class="half-width single-experience">
+    <h2>Full Stack Web Developer</h2>
+    <h3 class="orange-highlight">2022 - Present | Pro Level Web Developer</h3>
+    <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+</div>
+<div id="baby-web" class="half-width single-experience">
+    <h2>Baby Web Developer</h2>
+    <h3 class="orange-highlight">2022 - 2023 | Programming Hero Learner</h3>
+    <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it and uploaded the content. It was fun working at Programming Hero.</p>
+</div>
+</section>
+<footer>
+    <p>© Jannatul 2022, all rights reserved.</p>
+</footer>
 </body>
 </html>
